--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.13'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     testImplementation 'org.apache.httpcomponents:httpclient'
+//    compile group: 'org.springframework.security', name: 'spring-security-config', version: '3.2.0.RELEASE'
 }
 
 test {
